refactor: added admin route